2013-03-08  Andreas Arnez  <arnez@linux.vnet.ibm.com>

	* common.h (NT_S390_TDB): Define.

2013-02-06  Sandra Loosemore  <sandra@codesourcery.com>
            Andrew Jenner <andrew@codesourcery.com>

	Based on patches from Altera Corporation.

	* nios2.h: New file.

2013-01-24  Nick Clifton  <nickc@redhat.com>

	* v850.h: Add support for e3v5 architecture.
	Reorganize processor selection macros.

2013-01-16  H.J. Lu  <hongjiu.lu@intel.com>

	* i386.h (R_386_SIZE32): Fill it.
	* x86-64.h (R_X86_64_SIZE32): Likewise.
	(R_X86_64_SIZE64): Likewise.

2013-01-10  Will Newton <will.newton@imgtec.com>

	* common.h: Fix case of "Meta".
	* metag.h: New file.

2013-01-08  Yufeng Zhang  <yufeng.zhang@arm.com>

	* common.h (NT_ARM_TLS, NT_ARM_HW_BREAK, NT_ARM_HW_WATCH): New macro
	definitions.

2013-01-04  Juergen Urban <JuergenUrban@gmx.de>

	* mips.h: Add MIPS machine variant number for r5900 which is
	compatible with old Playstation 2 software.

2012-11-16  H.J. Lu  <hongjiu.lu@intel.com>

	* common.h (DF_1_CONLFAT): Renamed to ...
	(DF_1_CONFALT): This.
	(DF_1_ENDFILTEE): New.
	(DF_1_DISPRELDNE): Likewise.
	(DF_1_DISPRELPND): Likewise.
	(DF_1_NODIRECT): Likewise.
	(DF_1_IGNMULDEF): Likewise.
	(DF_1_NOKSYMS): Likewise.
	(DF_1_NOHDR): Likewise.
	(DF_1_EDITED): Likewise.
	(DF_1_NORELOC): Likewise.
	(DF_1_SYMINTPOSE): Likewise.
	(DF_1_GLOBAUDIT): Likewise.
	(DF_1_SINGLETON): Likewise.

2012-11-09  Nick Clifton  <nickc@redhat.com>

	* rx.h (EF_RX_CPU_RX): Add comment.
	(E_FLAG_RX_ABI): Define.

	* v850.h: Add RH850 ABI values.

2012-11-08  Maciej W. Rozycki  <macro@codesourcery.com>

	* mips.h (EF_MIPS_32BITMODE): Move next to lower-order bits.

2012-11-01  Tom Tromey  <tromey@redhat.com>

	* common.h (NT_386_TLS, NT_386_IOPERM): New defines.

2012-10-30  Steve McIntyre  <steve.mcintyre@linaro.org>

	* elf/arm.h (EF_ARM_ABI_FLOAT_SOFT): New define.
	(EF_ARM_ABI_FLOAT_HARD): Likewise.

2012-10-23  Tom Tromey  <tromey@redhat.com>

	* common.h (NT_SIGINFO, NT_FILE): New defines.
